# hng-stage_3cli

./: README.md
insighta-cli/: .gitignore  pyproject.toml
insighta-cli/.github/workflows/: ci.yml
insighta-cli/insighta/: cli.py
