[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insighta"
version = "1.0.0"
description = "Insighta Labs+ CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
insighta = "insighta.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["insighta*"]